--- a/StereoKitApp.csproj
+++ b/StereoKitApp.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <AssemblyName>VrVizSandboxApp</AssemblyName>
+    <RootNamespace>RDR</RootNamespace>
   </PropertyGroup>
 
   <!-- Hide platform project folders from the solution explorer -->
