--- a/StereoKitApp.csproj
+++ b/StereoKitApp.csproj
@@ -18,7 +18,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="StereoKit" Version="0.3.5-preview.3" />
+    <PackageReference Include="StereoKit" Version="0.3.5-preview.6" />
+    <PackageReference Include="System.Text.Json" Version="6.0.1" />
   </ItemGroup>
 
 </Project>
